Show pre-deploy attempts in operation history
